[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mutagen"
version = "0.1.0"
description = "Production-grade mutation testing for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mutagen Authors" }]
keywords = ["mutation-testing", "testing", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40", "jsonschema>=4.0"]
coverage = ["coverage>=7.4"]
sandbox = ["pytest>=8.0", "pytest-json-report>=1.5"]
mutation = ["mutmut>=2.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-json-report>=1.5",
    "jsonschema>=4.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
mutagen = "mutagen.main:main"

[tool.hatch.build.targets.wheel]
packages = ["mutagen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mutagen/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
