[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
# Distribution name on PyPI ("pip install mutagen-ai"). The import package is
# still `mutagen` (e.g. `from mutagen import ...`); only the published name
# differs, because the plain `mutagen` name is taken on PyPI.
name = "mutagen-ai"
version = "0.1.0"
description = "Production-grade mutation testing for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mutagen Authors" }]
keywords = ["mutation-testing", "testing", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
# Runtime essentials needed for the CLI, reporting, and persistence. The
# heavier integrations (Anthropic SDK, coverage, mutmut) are extras so a thin
# install stays light; `pip install mutagen[all]` pulls in everything.
dependencies = [
    "rich>=13.0",
    # Tiny, dependency-free; loaded at CLI start so a `.env` works out of the
    # box on a fresh `pip install` without an extra.
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "jsonschema>=4.0"]
openai = ["openai>=1.40", "jsonschema>=4.0"]
coverage = ["coverage>=7.4"]
sandbox = ["pytest>=8.0", "pytest-json-report>=1.5"]
mutation = ["mutmut>=2.4"]
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "jsonschema>=4.0",
    "coverage>=7.4",
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "mutmut>=2.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-json-report>=1.5",
    "jsonschema>=4.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
mutagen = "mutagen.main:main"

[tool.hatch.build.targets.wheel]
packages = ["mutagen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mutagen/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "D"]
ignore = [
    # Deliberate design choices, not defects:
    "UP042",  # `str, Enum` is used intentionally over `StrEnum` for clarity.
    "ANN401", # `Any` is correct where data is genuinely dynamic (JSON parsing).
    "D105",   # Dunder methods (__str__, __enter__, …) are self-documenting.
    "D107",   # __init__ is documented via its class docstring.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are self-describing by name; docstrings and full annotations on every
# test function/fixture/mock add noise without value.
"mutagen/tests/**" = ["D", "ANN", "B017"]
# Adapter methods implement abstract ports whose contracts are already
# documented on the ABC; re-documenting every override is redundant. D102 is
# still enforced on the port declarations themselves.
"mutagen/infrastructure/**" = ["D102"]
"mutagen/reporting/**" = ["D102"]
# Overrides of documented stdlib/Protocol methods (logging.Formatter.format,
# ProgressListener.__call__) likewise inherit their contract.
"mutagen/config/logging.py" = ["D102"]
"mutagen/services/progress.py" = ["D102"]
